--- a/replication_text.Rmd
+++ b/replication_text.Rmd
@@ -107,6 +107,49 @@ s <- mutate(b) %>% select(queen, fertile, infertile, forager)
 ### The vegan package I (and the authors) used for the diagram outputs to a file, not directly to R, so I am embedding the resulting image.
 
 ```{r}
+# attempt
+
+b <- filter(a, queenfertile_p<0.05 & abs(queenfertile_fold)>2 | queeninfertile_p<0.05 & abs(queeninfertile_fold)>2 | queenforager_p<0.05 & abs(queenforager_fold)>2 | fertileinfertile_p<0.05 & abs(fertileinfertile_fold)>2 | fertileforager_p<0.05 & abs(fertileforager_fold)>2 | infertileforager_p<0.05 & abs(infertileforager_fold)>2)
+
+q_nonzero <- filter(a, queen != 0)
+q_nonzero <- mutate(q_nonzero) %>% select(ID)
+
+fert_nonzero <- filter(a, fertile != 0)
+fert_nonzero <- mutate(fert_nonzero) %>% select(ID)
+
+infert_nonzero <- filter(a, infertile != 0)
+infert_nonzero <- mutate(infert_nonzero) %>% select(ID)
+
+for_nonzero <- filter(a, forager != 0)
+for_nonzero <- mutate(for_nonzero) %>% select(ID)
+
+
+venn.diagram(list(Queen=q_nonzero$ID, Forager=for_nonzero$ID, Fertile=fert_nonzero$ID, Infertile=infert_nonzero$ID), "replication_venn0.tiff", fill = c("blue", "red", "yellow", "green"), cex=1.5,cat.cex=1.8) 
+```
+
+<img src="replication_venn0.tiff".png" width="500px"/>
+
+```{r}
+# attempt
+q_nonzero <- filter(a, queen != 0 & ( queenfertile_p<0.05 & abs(queenfertile_fold)>2 | queeninfertile_p<0.05 & abs(queeninfertile_fold)>2 | queenforager_p<0.05 & abs(queenforager_fold)>2))
+q_nonzero <- mutate(q_nonzero) %>% select(ID)
+
+fert_nonzero <- filter(a, fertile != 0 & (queenfertile_p<0.05 & abs(queenfertile_fold)>2 | fertileinfertile_p<0.05 & abs(fertileinfertile_fold)>2 | fertileforager_p<0.05 & abs(fertileforager_fold)>2))
+fert_nonzero <- mutate(fert_nonzero) %>% select(ID)
+
+infert_nonzero <- filter(a, infertile != 0 & (fertileinfertile_p<0.05 & abs(fertileinfertile_fold)>2 | queeninfertile_p<0.05 & abs(queeninfertile_fold)>2 | infertileforager_p<0.05 & abs(infertileforager_fold)>2))
+infert_nonzero <- mutate(infert_nonzero) %>% select(ID)
+
+for_nonzero <- filter(a, forager != 0 & (infertileforager_p<0.05 & abs(infertileforager_fold)>2 | fertileforager_p<0.05 & abs(fertileforager_fold)>2 | queenforager_p<0.05 & abs(queenforager_fold)>2))
+for_nonzero <- mutate(for_nonzero) %>% select(ID)
+
+
+venn.diagram(list(Queen=q_nonzero$ID, Forager=for_nonzero$ID, Fertile=fert_nonzero$ID, Infertile=infert_nonzero$ID), "replication_venn1.tiff", fill = c("blue", "red", "yellow", "green"), cex=1.5,cat.cex=1.8) 
+```
+
+<img src="replication_venn1.tiff".png" width="500px"/>
+
+```{r}
 # SECOND CLOSEST
 q_nonzero <- filter(a, queen != 0 & queenfertile_p<0.05 & abs(queenfertile_fold)>2 & queeninfertile_p<0.05 & abs(queeninfertile_fold)>2 & queenforager_p<0.05 & abs(queenforager_fold)>2)
 q_nonzero <- mutate(q_nonzero) %>% select(ID)
@@ -120,7 +163,13 @@ infert_nonzero <- mutate(infert_nonzero) %>% select(ID)
 for_nonzero <- filter(a, forager != 0 & infertileforager_p<0.05 & abs(infertileforager_fold)>2 & fertileforager_p<0.05 & abs(fertileforager_fold)>2 & queenforager_p<0.05 & abs(queenforager_fold)>2)
 for_nonzero <- mutate(for_nonzero) %>% select(ID)
 
-####
+
+venn.diagram(list(Queen=q_nonzero$ID, Forager=for_nonzero$ID, Fertile=fert_nonzero$ID, Infertile=infert_nonzero$ID), "replication_venn2.tiff", fill = c("blue", "red", "yellow", "green"), cex=3,cat.cex=1.8) 
+```
+
+<img src="replication_venn2.tiff".png" width="500px"/>
+
+```{r}
 #CLOSEST
 q_nonzero <- filter(a, queen != 0 & queenfertile_p<0.05 & queeninfertile_p<0.05 & queenforager_p<0.05)
 q_nonzero <- mutate(q_nonzero) %>% select(ID)
@@ -135,9 +184,9 @@ for_nonzero <- filter(a, forager != 0 & infertileforager_p<0.05 & fertileforager
 for_nonzero <- mutate(for_nonzero) %>% select(ID)
 
 
-venn.diagram(list(Queen=q_nonzero$ID, Forager=for_nonzero$ID, Fertile=fert_nonzero$ID, Infertile=infert_nonzero$ID), "replication_venn.tiff", fill = c("blue", "red", "yellow", "green"), cex=3,cat.cex=1.8) 
+venn.diagram(list(Queen=q_nonzero$ID, Forager=for_nonzero$ID, Fertile=fert_nonzero$ID, Infertile=infert_nonzero$ID), "replication_venn3.tiff", fill = c("blue", "red", "yellow", "green"), cex=3,cat.cex=1.8) 
 ```
-<img src="replication_venn.tiff".png" width="500px"/>
+<img src="replication_venn3.tiff".png" width="500px"/>
 
 ### I did not replicate figure 2 because the vast majority of the process behind that graph was not done in R. It needs to be done using BLASTx rather than R. Unfortunately the authors did not publish the raw results of the BLAST they did. 
 
@@ -200,27 +249,29 @@ pie
 
 ```{r}
 
-#b <- filter(a, queenfertile_p<0.05 & abs(queenfertile_fold)>2 | queeninfertile_p<0.05 & abs(queeninfertile_fold)>2 | queenforager_p<0.05 & abs(queenforager_fold)>2 | fertileinfertile_p<0.05 & abs(fertileinfertile_fold)>2 | fertileforager_p<0.05 & abs(fertileforager_fold)>2 | infertileforager_p<0.05 & abs(infertileforager_fold)>2)
+q_up <- filter(a, queenfertile_p<0.05 & abs(queenfertile_fold) > 2 & queeninfertile_p<0.05 & abs(queeninfertile_fold)>2 & queenforager_p<0.05 & abs(queenforager_fold)>2)
 
-#q_up <- filter(b, (queen > forager) & (queen > fertile) & (queen > infertile))
+fert_up <- filter(a, queenfertile_p<0.05 & abs(queenfertile_fold) < 2 & fertileinfertile_p<0.05 & abs(fertileinfertile_fold)>2 & fertileforager_p<0.05 & abs(fertileforager_fold)>2)
 
-#fert_up <- filter(b, (fertile > forager) & (fertile > queen) & (fertile > infertile))
+infert_up <- filter(a, fertileinfertile_p<0.05 & abs(fertileinfertile_fold) < 2 & queeninfertile_p<0.05 & abs(queeninfertile_fold) < 2 & infertileforager_p<0.05 & abs(infertileforager_fold)>2)
 
-#infert_up <- filter(b, (infertile > forager) & (infertile > queen) & (infertile > fertile))
-
-#for_up <- filter(b, (forager > fertile) & (forager > queen) & (forager > infertile))
+for_up <- filter(a, infertileforager_p<0.05 & abs(infertileforager_fold) < 2 & fertileforager_p<0.05 & abs(fertileforager_fold) < 2 & queenforager_p<0.05 & abs(queenforager_fold) < 2)
 
 ###
 
-#q_up <- filter(a, queenfertile_p<0.05 & queenfertile_fold>0 & queeninfertile_p<0.05 & queeninfertile_fold>0 & queenforager_p<0.05 & queenforager_fold>0)
+slices <- c(nrow(q_up), nrow(fert_up), nrow(infert_up), nrow(for_up)) 
+lbls <- c("q", "fer", "inf", "for")
+lbls <- paste(lbls, slices) # add percents to labels 
 
-#fert_up <- filter(a, queenfertile_p<0.05 & queenfertile_fold < 0 & fertileinfertile_p<0.05 & fertileinfertile_fold>0 & fertileforager_p<0.05 & fertileforager_fold>0)
+df <- data.frame(group = lbls, value = slices)
 
-#infert_up <- filter(a, fertileinfertile_p<0.05 & fertileinfertile_fold < 0 & queeninfertile_p<0.05 & queeninfertile_fold < 0 & infertileforager_p<0.05 & infertileforager_fold>0)
+bp<- ggplot(df, aes(x="", y=value, fill=group))+ geom_bar(width = 1, stat = "identity")+ scale_fill_manual(values = c("q 1587" = "blue", "fer 11" = "red", "inf 6" = "green", "for 33" = "purple"))
 
-#for_up <- filter(a, infertileforager_p<0.05 & infertileforager_fold < 0 & fertileforager_p<0.05 & fertileforager_fold < 0 & queenforager_p<0.05 & queenforager_fold < 0)
+pie <- bp + coord_polar("y", start=45) + blank_theme + theme(axis.text.x=element_blank()) + geom_text(aes(x = 1.6, label = c("q 1587", "fer 11", "inf 6", "for 33")), size=3, position = position_stack(vjust = 0.5))
+pie
+```
 
-###
+```{r}
 
 q_up <- filter(a, queenfertile_p<0.05 & queenfertile_fold>2 & queeninfertile_p<0.05 & queeninfertile_fold>2 & queenforager_p<0.05 & queenforager_fold>2)
 
@@ -230,16 +281,17 @@ infert_up <- filter(a, fertileinfertile_p<0.05 & fertileinfertile_fold < -2 & qu
 
 for_up <- filter(a, infertileforager_p<0.05 & infertileforager_fold < -2 & fertileforager_p<0.05 & fertileforager_fold < -2 & queenforager_p<0.05 & queenforager_fold < -2)
 
+###
+
 slices <- c(nrow(q_up), nrow(fert_up), nrow(infert_up), nrow(for_up)) 
 lbls <- c("q", "fer", "inf", "for")
 lbls <- paste(lbls, slices) # add percents to labels 
 
-###
 df <- data.frame(group = lbls, value = slices)
 
 bp<- ggplot(df, aes(x="", y=value, fill=group))+ geom_bar(width = 1, stat = "identity")+ scale_fill_manual(values = c("q 380" = "blue", "fer 31" = "red", "inf 23" = "green", "for 16" = "purple"))
 
-pie <- bp + coord_polar("y", start=45) + blank_theme + theme(axis.text.x=element_blank()) + geom_text(aes(x = 1.6, label = c("q 380", "fer 31", "for 16", "inf 23")), size=3, position = position_stack(vjust = 0.5))
+pie <- bp + coord_polar("y", start=45) + blank_theme + theme(axis.text.x=element_blank()) + geom_text(aes(x = 1.6, label = c("q 380", "fer 31", "inf 23", "for 16")), size=3, position = position_stack(vjust = 0.5))
 pie
 
 ```
@@ -252,7 +304,6 @@ pie
 ## This table shows "Number of significantly up-regulated genes (FDR-P < 0.05; fold change >2) in the focal caste in comparison withthe other castes and the number of pair-specific genes (genes up-regulated in only this specific comparison) with the corresponding percentage in parentheses."
 
 ### Unlike the previous depictions of numbers of differentially expressed genes between phenotypes, this table illustrates both "directions" of the comparison to differentiate between genes upregulated in one of the two compared phenotypes vs. those upregulated in the other.
-
 
 ```{r}
 
